--- a/index.html
+++ b/index.html
@@ -7,33 +7,36 @@
 <body class="home">
   <div id="container">
 
-    <header class="site">
+    <div class="header site">
       <h1><a href="index.html">Man Enough To Care</a></h1>
-      <nav class="site">
+      <div class="nav site">
         <ul>
           <li class="inactive about"><a href="#">About</a>
           <li class="inactive contact"><a href="#">Contact</a>
         </ul>
-      </nav>
+      </div>
 
-    </header>
+    </div>
 
-    <section id="content">
-      <article>
+    <div class="section" id="content">
+      <div class="article">
+
         <p><span class="drop">M</span>an Enough To Care is an organization, a haven for intelligent, forward thinkers and an incubator for the rising stars of a new world of conscientious men.
         <p>The community beholden to Man Enough To Care offer a distinct company, drawn together to commune around the shared values of its founding principle: challenge the paradigm that men cannot navigate success in social change while nurturing deep, and meaningful peer admiration.
         <p>The underling motivation is and will always be, &ldquo;are you man enough to care?&rdquo;
-      </article>
-      <nav class="site">
+      </div>
+
+      <div class="nav site">
         <ul>
           <li class="home"><a href="index.html">Home</a>
           <li class="store"><a href="store.html">Store</a>
           <li class="blog inactive"><a href="#">Blog</a>
         </ul>
-      </nav>
-    </section>
+      </div>
 
-    <footer class="site">
+    </div>
+
+    <div class="footer site">
       <p id="copyright">&copy; 2011 <a href="index.html">Man Enough To Care &trade;</a>
-    </footer>
+    </div>
   </div>
