--- a/store.html
+++ b/store.html
@@ -7,37 +7,39 @@
 <body class="store">
   <div id="container">
 
-    <header class="site">
+    <div class="header site">
       <h1><a href="index.html">Man Enough To Care</a></h1>
-      <nav class="site">
+      <div class="nav site">
         <ul>
           <li class="inactive about"><a href="#">About</a>
           <li class="inactive contact"><a href="#">Contact</a>
         </ul>
-      </nav>
+      </div>
 
-    </header>
+    </div>
 
-    <section id="content">
-      <article>
+    <div class="section" id="content">
+      <div class="article">
         <h2>Store</h2>
         <ul class="products">
           <li class="product">
             <h3>Man Enough To Care T-Shirt</h3>
-            <img src="#" width="400" height="300">
+            <img src="#" width="300" height="400" alt="picture of Man Enough To Care T-Shirt">
             <p class="buy"><a href="#">Buy on Cafepress</a></p>
         </ul>
-      </article>
-      <nav class="site">
+      </div>
+
+      <div class="nav site">
         <ul>
           <li class="home"><a href="index.html">Home</a>
           <li class="store"><a href="store.html">Store</a>
           <li class="blog inactive"><a href="#">Blog</a>
         </ul>
-      </nav>
-    </section>
+      </div>
 
-    <footer class="site">
+    </div>
+
+    <div class="footer site">
       <p id="copyright">&copy; 2011 <a href="index.html">Man Enough To Care &trade;</a>
-    </footer>
+    </div>
   </div>
