fb/twit buttons, logo, text updates

--- a/store.html
+++ b/store.html
@@ -8,7 +8,7 @@
   <div id="container">
 
     <div class="header site">
-      <h1><a href="index.html">Man Enough To Care</a></h1>
+      <h1><a href="index.html"><img src="i/logo.png" alt="Man Enough To Care"></a></h1>
       <div class="nav site">
         <ul>
           <li class="inactive about"><a href="#">About</a>
@@ -20,10 +20,10 @@
 
     <div class="section" id="content">
       <div class="article">
-        <h2>Store</h2>
+        <h2>Guy Your Gear</h2>
         <ul class="products">
           <li class="product">
-            <h3>Man Enough To Care T-Shirt</h3>
+            <h3>Man Enough to Care T-Shirt</h3>
             <img src="#" width="300" height="400" alt="picture of Man Enough To Care T-Shirt">
             <p class="buy"><a href="#">Buy on Cafepress</a></p>
         </ul>
@@ -32,7 +32,7 @@
       <div class="nav site">
         <ul>
           <li class="home"><a href="index.html">Home</a>
-          <li class="store"><a href="store.html">Store</a>
+          <li class="store"><a href="store.html">Guy Your Gear</a>
           <li class="blog inactive"><a href="#">Blog</a>
         </ul>
       </div>
@@ -40,6 +40,12 @@
     </div>
 
     <div class="footer site">
-      <p id="copyright">&copy; 2011 <a href="index.html">Man Enough To Care &trade;</a>
+      <ul>
+        <li class="copyright">&copy; 2009 <a href="index.html">Man Enough to Care &trade;</a>
+        <li class="facebook">
+          <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fexample.com%2Fpage%2Fto%2Flike&amp;layout=button_count&amp;show_faces=false&amp;width=90&amp;action=like&amp;font=trebuchet+ms&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
+        <li class="twitter">
+          <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-via="zcpeng">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+      </ul>
     </div>
   </div>
