--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div id="container">
 
     <div class="header site">
-      <h1><a href="index.html">Man Enough To Care</a></h1>
+      <h1><a href="index.html"><img src="i/logo.png" alt="Man Enough To Care"></a></h1>
       <div class="nav site">
         <ul>
           <li class="inactive about"><a href="#">About</a>
@@ -29,7 +29,7 @@
       <div class="nav site">
         <ul>
           <li class="home"><a href="index.html">Home</a>
-          <li class="store"><a href="store.html">Store</a>
+          <li class="store"><a href="store.html">Guy Your Gear</a>
           <li class="blog inactive"><a href="#">Blog</a>
         </ul>
       </div>
@@ -37,6 +37,12 @@
     </div>
 
     <div class="footer site">
-      <p id="copyright">&copy; 2011 <a href="index.html">Man Enough To Care &trade;</a>
+      <ul>
+        <li class="copyright">&copy; 2009 <a href="index.html">Man Enough to Care &trade;</a>
+        <li class="facebook">
+          <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fexample.com%2Fpage%2Fto%2Flike&amp;layout=button_count&amp;show_faces=false&amp;width=90&amp;action=like&amp;font=trebuchet+ms&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
+        <li class="twitter">
+          <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-via="zcpeng">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+      </ul>
     </div>
   </div>
