--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <ul>
         <li class="copyright">&copy; 2009 <a href="index.html">Man Enough to Care &trade;</a>
         <li class="facebook">
-          <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fexample.com%2Fpage%2Fto%2Flike&amp;layout=button_count&amp;show_faces=false&amp;width=90&amp;action=like&amp;font=trebuchet+ms&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
+          <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fmanenoughtocare.com&amp;layout=button_count&amp;show_faces=false&amp;width=90&amp;action=like&amp;font=trebuchet+ms&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
         <li class="twitter">
           <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-via="zcpeng">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
       </ul>
