--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="section" id="content">
       <div class="article">
 
-        <p><span class="drop">M</span>an Enough To Care is an organization, a haven for intelligent, forward thinkers and an incubator for the rising stars of a new world of conscientious men.
+        <p><span class="drop">M</span>an Enough to Care is an organization, a haven for intelligent, forward thinkers and an incubator for the rising stars of a new world of conscientious men.
         <p>The community beholden to Man Enough To Care offer a distinct company, drawn together to commune around the shared values of its founding principle: challenge the paradigm that men cannot navigate success in social change while nurturing deep, and meaningful peer admiration.
         <p>The underling motivation is and will always be, &ldquo;are you man enough to care?&rdquo;
       </div>
