--- a/store.html
+++ b/store.html
@@ -24,11 +24,11 @@
         <ul class="products">
           <li class="product">
             <h3>Man Enough to Care T-Shirt</h3>
-            <a class="img" href="//cafepress.com/ManEnoughtoCare">
+            <a class="img" target="_blank" href="//cafepress.com/ManEnoughtoCare">
               <img src="http://images.cpcache.com/merchandise/152_420x420_Front_Color-Black.jpg?region=name:FrontCenter,w:10,h:10,a:TopCenter,id:52288785" width="420" height="420" alt="picture of Man Enough To Care T-Shirt">
             </a>
             <p class="price">$17.00</p>
-            <p class="buy"><a href="//cafepress.com/ManEnoughtoCare">Buy on Cafepress</a></p>
+            <p class="buy"><a target="_blank" href="//cafepress.com/ManEnoughtoCare">Buy on Cafepress</a></p>
         </ul>
       </div>
 
