--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div class="footer site">
       <ul>
         <li class="copyright">&copy; 2009 <a href="index.html">Man Enough to Care &trade;</a>
+        <li class="designer">Design by <a href="//nylira.com">Nylira</a>
         <li class="facebook">
           <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fmanenoughtocare.com&amp;layout=button_count&amp;show_faces=false&amp;width=90&amp;action=like&amp;font=trebuchet+ms&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
         <li class="twitter">
