--- a/index.html
+++ b/index.html
@@ -9,27 +9,23 @@
 
     <div class="header site">
       <h1><a href="index.html"><img src="i/logo.png" alt="Man Enough To Care"></a></h1>
-      <div class="nav site">
-        <ul>
-          <li class="inactive about"><a href="#">About</a>
-          <li class="inactive contact"><a href="#">Contact</a>
-        </ul>
-      </div>
-
     </div>
 
     <div class="section" id="content">
       <div class="article">
+        <div class="section">
 
-        <p><span class="drop">M</span>an Enough to Care is an organization, a haven for intelligent, forward thinkers and an incubator for the rising stars of a new world of conscientious men.
-        <p>The community beholden to Man Enough to Care offer a distinct company, drawn together to commune around the shared values of its founding principle: challenge the paradigm that men cannot navigate success in social change while nurturing deep, and meaningful peer admiration.
-        <p>The underling motivation is and will always be, &ldquo;are you man enough to care?&rdquo;
+          <p><span class="drop">M</span>an Enough to Care is an organization, a haven for intelligent, forward thinkers and an incubator for the rising stars of a new world of conscientious men.
+          <p>The community beholden to Man Enough to Care offer a distinct company, drawn together to commune around the shared values of its founding principle: challenge the paradigm that men cannot navigate success in social change while nurturing deep, and meaningful peer admiration.
+          <p>The underling motivation is and will always be, &ldquo;are you man enough to care?&rdquo;
+        </div>
       </div>
 
       <div class="nav site">
         <ul>
           <li class="home"><a href="index.html">Home</a>
           <li class="store"><a href="store.html">Guy Your Gear</a>
+          <li class="about"><a href="about.html">About</a>
           <li class="blog inactive"><a href="#">Blog</a>
         </ul>
       </div>
