--- a/store.html
+++ b/store.html
@@ -9,13 +9,6 @@
 
     <div class="header site">
       <h1><a href="index.html"><img src="i/logo.png" alt="Man Enough To Care"></a></h1>
-      <div class="nav site">
-        <ul>
-          <li class="inactive about"><a href="#">About</a>
-          <li class="inactive contact"><a href="#">Contact</a>
-        </ul>
-      </div>
-
     </div>
 
     <div class="section" id="content">
@@ -27,6 +20,8 @@
             <a class="img" target="_blank" href="//cafepress.com/ManEnoughtoCare">
               <img src="http://images.cpcache.com/merchandise/152_420x420_Front_Color-Black.jpg?region=name:FrontCenter,w:10,h:10,a:TopCenter,id:52288785" width="420" height="420" alt="picture of Man Enough To Care T-Shirt">
             </a>
+
+            <p class="desc">The art for this t-shirt was initially and exclusively created for Hint Mint&rsquo;s Art for Awareness, Limited Edition Series, featuring <a href="about.html#anthony">Anthony Freda</a>.</p>
             <p class="price">$17.00</p>
             <p class="buy"><a target="_blank" href="//cafepress.com/ManEnoughtoCare">Buy on Cafepress</a></p>
         </ul>
@@ -36,6 +31,7 @@
         <ul>
           <li class="home"><a href="index.html">Home</a>
           <li class="store"><a href="store.html">Guy Your Gear</a>
+          <li class="about"><a href="about.html">About</a>
           <li class="blog inactive"><a href="#">Blog</a>
         </ul>
       </div>
@@ -45,6 +41,7 @@
     <div class="footer site">
       <ul>
         <li class="copyright">&copy; 2009 <a href="index.html">Man Enough to Care &trade;</a>
+        <li class="designer">Design by <a href="//nylira.com">Nylira</a>
         <li class="facebook">
           <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fmanenoughtocare.com&amp;layout=button_count&amp;show_faces=false&amp;width=90&amp;action=like&amp;font=trebuchet+ms&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
         <li class="twitter">
