--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <div class="section about">
           <h2>About</h2>
           <h3>Who&rsquo;s Behind ME2C?</h3>
-          <p><a href="http://hintmint.com">Hint Mint</a> (The Original Designer Breath Mint) commissioned original artwork from artist across the country (mostly men) to created artwork depicting a story with Breast Cancer at the epicenter of the piece.
+          <p><a href="http://hintmint.com">Hint Mint</a> (The Original Designer Breath Mint) commissioned original artwork from artist across the country (mostly men) to create artwork depicting a story with Breast Cancer at the epicenter of the piece.
           <p>Hint Mint has always been at the forefront of fine design in the world of confection, first with the Classic tin (a package so well designed that it was often emulated and had to be patented to protect its likeness), then taking the leap of printing artists' original artwork on the Classic tin in the &ldquo;Limited Edition Artist Series&rdquo; program. 
           <p>Introduced in 2001, the Artist Series program has been a huge success, with contributing artists such as Gary Baseman and James Jean selling out their tins in just 8 weeks. 
           <p>The company has also been an active fundraiser for non-profit organizations through their &ldquo;Awareness Series&rdquo; program, which began in 2005 as a way to increase the awareness and understanding of breast cancer. The Awareness tins are the Classic tin design, but in pink with a pink ribbon in the center. Now, with Art For Awareness, Hint Mint encouraged Artist across the country to imbue their art with an Awareness story.
