--- a/store.html
+++ b/store.html
@@ -23,7 +23,7 @@
 
             <p class="desc">The art for this t-shirt was initially and exclusively created for Hint Mint&rsquo;s Art for Awareness, Limited Edition Series, featuring <a href="about.html#anthony">Anthony Freda</a>.</p>
             <p class="price">$17.00</p>
-            <p class="buy"><a target="_blank" href="//cafepress.com/ManEnoughtoCare">Buy on Cafepress</a></p>
+            <p class="buy"><a target="_blank" href="//cafepress.com/ManEnoughtoCare">Browse the store</a></p>
         </ul>
       </div>
 
